--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "node-basics",
   "version": "0.0.0",
+  "author": "Kevin Tian",
   "description": "basics of nodeJS",
   "keywords": [
     "node.js",
     "javascript"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gitTianxy/node-basics.git"
+  },
+  "config": {},
+  "scripts": {},
   "dependencies": {
     "_accepts@1.3.4@accepts": "^1.3.4",
     "_array-flatten@1.1.1@array-flatten": "^1.1.1",
@@ -104,15 +111,5 @@
     "utils-merge": "^1.0.1",
     "vary": "^1.1.2"
   },
-  "devDependencies": {},
-  "scripts": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gitTianxy/node-basics.git"
-  },
-  "author": "Kevin Tian",
-  "bugs": {
-    "url": "https://github.com/gitTianxy/node-basics/issues"
-  },
-  "homepage": "https://github.com/gitTianxy/node-basics#readme"
+  "devDependencies": {}
 }
