--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "_destroy@1.0.4@destroy": "^1.0.4",
     "_ee-first@1.1.1@ee-first": "^1.1.1",
     "_encodeurl@1.0.1@encodeurl": "^1.0.1",
-    "_etag@1.8.1@etag": "^1.8.1",
     "_escape-html@1.0.3@escape-html": "^1.0.3",
+    "_etag@1.8.1@etag": "^1.8.1",
     "_express@4.16.2@express": "^4.16.2",
     "_finalhandler@1.1.0@finalhandler": "^1.1.0",
     "_forwarded@0.1.2@forwarded": "^0.1.2",
@@ -49,13 +49,15 @@
     "_parseurl@1.3.2@parseurl": "^1.3.2",
     "_path-to-regexp@0.1.7@path-to-regexp": "^0.1.7",
     "_proxy-addr@2.0.2@proxy-addr": "^2.0.2",
-    "_range-parser@1.2.0@range-parser": "^1.2.0",
     "_qs@6.5.1@qs": "^6.5.1",
+    "_range-parser@1.2.0@range-parser": "^1.2.0",
     "_raw-body@2.3.2@raw-body": "^2.3.2",
     "_safe-buffer@5.1.1@safe-buffer": "^5.1.1",
     "_send@0.16.1@send": "^0.16.1",
     "_serve-static@1.13.1@serve-static": "^1.13.1",
     "_setprototypeof@1.0.3@setprototypeof": "^1.0.3",
+    "_setprototypeof@1.1.0@setprototypeof": "^1.1.0",
+    "_statuses@1.3.1@statuses": "^1.3.1",
     "_statuses@1.4.0@statuses": "^1.4.0",
     "_type-is@1.6.15@type-is": "^1.6.15",
     "_unpipe@1.0.0@unpipe": "^1.0.0",
@@ -103,9 +105,8 @@
     "send": "^0.16.1",
     "serve-static": "^1.13.1",
     "setprototypeof": "^1.0.3",
+    "sleep": "^5.1.1",
     "statuses": "^1.4.0",
-    "_setprototypeof@1.1.0@setprototypeof": "^1.1.0",
-    "_statuses@1.3.1@statuses": "^1.3.1",
     "type-is": "^1.6.15",
     "unpipe": "^1.0.0",
     "utils-merge": "^1.0.1",
